# csci_473_stencil_serial

./: .gitignore  CMakeLists.txt  Makefile  make-2d.c  print-2d.c  stencil-2d.c  utilities.c  utilities.h
